added email to header when user is logged in, added logout.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -125,7 +125,12 @@
             <div class="divide txt_white">|</div>
             <div class="link txt_white">Contact</div>
             <div class="divide txt_white">|</div>
-            <div class="link txt_white" onclick="login()">Login</div>
+            <div class="link txt_white" onclick="login()" th:if="${username == 'guest'}">Login</div>
+            <div class="link txt_white" th:unless="${username == 'guest'}">
+                <span class="txt_white" style="display: inline-block;" th:text="${username + '('}"></span>
+                <a th:href="@{/logout}" style="display: inline-block;">logout</a>
+                <span class="txt_white" style="display: inline-block;">)</span>
+            </div>
             <div class="link txt_white container authenticated" style="display: none;">
                 <div style="color: #ffffff;" id="user"></div>
                 <div>
@@ -161,7 +166,7 @@
             <i class="far fa-times-circle closeLogin" onclick="closeLogin()"></i>
             <div class="login_form">
                 <div class="title">Login<span onclick="regForm()" style="display: inline-block; text-decoration: none;">/Register</span></div>
-                <form th:action="${'/data/login'}" method="post">
+                <form th:action="${'/login'}" method="post">
                     <input type="hidden" name="returnPath" th:value="${returnPath}" />
                     <input type="text" name="email" placeholder="email" required="required" />
                     <input type="password" name="password" placeholder="password" required="required" />
@@ -170,7 +175,7 @@
             </div>
             <div class="registration_form" style="display: none;">
                 <div class="title"><span onclick="logForm()" style="display: inline-block; text-decoration: none;">Login/</span>Register</div>
-                <form th:action="${'/data/register'}" method="post">
+                <form th:action="${'/register'}" method="post">
                     <input type="hidden" name="returnPath" th:value="${returnPath}" />
                     <input type="text" name="email" placeholder="email" required="required" />
                     <input type="password" name="password" placeholder="password" required="required" />
