--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -119,7 +119,7 @@
 
 <div id="header" th:fragment="header">
     <div id="header_box">
-        <img id="header_img" src="/images/logo3.png" />
+        <img id="header_img" src="/images/logo4.png" />
         <div class="nav flex-row">
             <div class="link txt_white"><a th:href="@{/}">Shop</a></div>
             <div class="divide txt_white">|</div>
@@ -131,18 +131,12 @@
                 <a th:href="@{/logout}" style="display: inline-block;">logout</a>
                 <span class="txt_white" style="display: inline-block;">)</span>
             </div>
-            <div class="link txt_white container authenticated" style="display: none;">
-                <div style="color: #ffffff;" id="user"></div>
-                <div>
-                    <button onclick="logout()" class="btn btn-primary">Logout</button>
-                </div>
-            </div>
         </div>
-        <div id="cart">
+        <a th:href="@{/checkout/cart}" id="cart">
             <i class="fas fa-shopping-cart cart"></i>
             <span class="cart">Your Cart</span>
-        </div>
-        <div class="cart_total" th:text="${cartCnt}" th:if="${cartCnt > 0}"></div>
+        </a>
+        <a th:href="@{/checkout/cart}" class="txt_white cart_total" th:text="${cartCnt}" th:if="${cartCnt > 0}"></a>
         <div id="title" class="txt_white" th:text="${title}">PAGE NAME</div>
         <form>
             <div id="search_area" class="flex-row"><i class="fas fa-search"></i><input type="text" name="q" placeholder="Search..." /></div>
