--- a/src/main/resources/templates/checkout/cart.html
+++ b/src/main/resources/templates/checkout/cart.html
@@ -15,8 +15,8 @@
             <div th:text="${item.key.maxPrice}" style="display: block; position: absolute; margin: -40px 0 0 155px; font-size: 14px;"></div>
             <form action="/data/cart/updateQuant" method="post">
                 <input type="hidden" name="itemId" th:value="${item.key.itemId}"/>
-                <select onchange="this.form.submit()" name="quantity" style="display: block; position: absolute; margin: -80px 0 0 600px;">
-                    <option th:each="i: ${#numbers.sequence( 0, item.key.totalQuant, 1)}" th:value="${i}" th:text="${i}" th:selected="${i == item.value} ?: 'selected'" />
+                <select onchange="this.form.submit()" name="quantity" style="display: block; position: absolute; margin: -80px 0 0 600px; width: 40px;">
+                    <option th:each="i: ${#numbers.sequence( 0, item.key.totalQuant, 1)}" th:value="${i}" th:text="${i == 0} ? 'remove' : ${i}" th:selected="${i == item.value} ?: 'selected'" />
                 </select>
             </form>
         </div>
