--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,14 +1,18 @@
 /* TABLE OF CONTENT *
-    GENERAL     -  11
-    BODY        -  32
-    CART        -  76
-    FOOTER      - 106
-    HEADER      - 166
-    NAVIGATION  - 234
-    SEARCH BAR  - 250
-    SEARCH TERM - 293    */
+      13 - GENERAL
+      35 - BODY
+      80 - CART
+     110 - FOOTER
+     170 - HEADER
+     238 - NAVIGATION
+     267 - PRODUCT PAGE
+     392 - SEARCH BAR
+     435 - SEARCH TERM
+     460 - LOGIN/REGISTRATION   */
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
+
+/********** GENERAL **********/
 
 * {
   display: block;
@@ -213,10 +217,6 @@
     top: 345px;
     width: 100%;
 }
-
-// .subMenu {
-//     top: 370px;
-//     }
 
 #menu a, .subMenu a {
     color: #ffffff;
@@ -459,8 +459,6 @@
 
 /********** LOGIN / REGISTRATION **********/
 
-.onOff {display: none;}
-
 .closeLogin {
     position: absolute;
     font-size: 32px;
@@ -488,6 +486,23 @@
     background-color: #a9a9a9;
 }
 
+.facebook, .github, .google, .twitter {
+    margin: 20px 15px 0;
+    font-size: 36px;
+}
+
+.facebook:hover {
+    color: #3c5a99;
+}
+
+.github:hover {
+    color: #4078c0;
+}
+
+.google:hover {
+    color: #4285f4;
+}
+
 #login_container {
     width: 500px;
     height: 250px;
@@ -503,13 +518,15 @@
     z-index: 300;
     text-align: center;
 }
-#login_container .title {
-    text-decoration: underline;
-    font-size: 36px;
+
+#login_container button {
+    width: 410px;
+    height: 40px;
+    font-size: 22px;
     font-weight: bold;
-    width: 470px;
-    padding-bottom: 3px;
-    margin: 0 auto 5px;
+    border: 2px solid #606060;
+    border-radius: 10px;
+    margin: 15px auto 0;
 }
 
 #login_container input {
@@ -527,33 +544,19 @@
     border-bottom: 2px solid #000000;
 }
 
-#login_container button {
-    width: 410px;
-    height: 40px;
-    font-size: 22px;
-    font-weight: bold;
-    border: 2px solid #606060;
-    border-radius: 10px;
-    margin: 15px auto 0;
-}
-
-.google, .facebook, .twitter, .github {
-    margin: 20px 15px 0;
+#login_container .title {
+    text-decoration: underline;
     font-size: 36px;
+    font-weight: bold;
+    width: 470px;
+    padding-bottom: 3px;
+    margin: 0 auto 5px;
 }
 
-.google:hover {
-    color: #4285f4;
-}
-
-.facebook:hover {
-    color: #3c5a99;
+.onOff {
+    display: none;
 }
 
 .twitter:hover {
     color: #1da1f2;
-}
-
-.github:hover {
-    color: #4078c0;
 }
